[gd_scene load_steps=78 format=3 uid="uid://c3w40nucf3oud"]

[ext_resource type="Script" path="res://scripts/gd/enemy_control.gd" id="1_pbqx5"]
[ext_resource type="Texture2D" uid="uid://cyy1lqnxket53" path="res://assets/sprite/Simple Enemie/Portrait_Icon_baller.png" id="2_gg1ba"]
[ext_resource type="Texture2D" uid="uid://bkeeqjwy0n727" path="res://assets/sprite/Simple Enemie/Current_Enemy_indicator.png" id="2_htaiq"]
[ext_resource type="Resource" uid="uid://cavpus50mqa66" path="res://scripts/resources/misaliniouse/Initiative_resource.tres" id="3_gt5bv"]
[ext_resource type="PackedScene" uid="uid://dpreubai0v75h" path="res://scenes/Bar_system.tscn" id="4_700jv"]
[ext_resource type="Resource" uid="uid://dps5ywyu0gs31" path="res://scripts/resources/CH/Baller_Figting_Stats.tres" id="4_ndcdo"]
[ext_resource type="Texture2D" uid="uid://co1gva2770fyx" path="res://assets/sprite/Simple Enemie/baller_sprite_sheet0280.png" id="5_bdy0d"]
[ext_resource type="Shader" path="res://scripts/gdshader/NULL_progress_bar.gdshader" id="5_grx1e"]
[ext_resource type="Shader" path="res://scripts/gdshader/hp_segmented_progress_bar.gdshader" id="6_fua16"]
[ext_resource type="Shader" path="res://scripts/gdshader/eng_segmented_progress_bar.gdshader" id="7_1uto1"]
[ext_resource type="Script" path="res://scripts/resources/CH/Basic_stats_resources.gd" id="8_vgosh"]
[ext_resource type="Script" path="res://addons/ProCam2D/scripts/pcam_target.gd" id="12_wuf5g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qs5gw"]
radius = 30.0

[sub_resource type="AtlasTexture" id="AtlasTexture_et4k7"]
atlas = ExtResource("5_bdy0d")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_odhgk"]
atlas = ExtResource("5_bdy0d")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmxhc"]
atlas = ExtResource("5_bdy0d")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ijoh"]
atlas = ExtResource("5_bdy0d")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4330o"]
atlas = ExtResource("5_bdy0d")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr7an"]
atlas = ExtResource("5_bdy0d")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jd1d"]
atlas = ExtResource("5_bdy0d")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahjk"]
atlas = ExtResource("5_bdy0d")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn5lr"]
atlas = ExtResource("5_bdy0d")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm1f2"]
atlas = ExtResource("5_bdy0d")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k8j6"]
atlas = ExtResource("5_bdy0d")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku1fh"]
atlas = ExtResource("5_bdy0d")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf8hv"]
atlas = ExtResource("5_bdy0d")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ct8j"]
atlas = ExtResource("5_bdy0d")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_us6rk"]
atlas = ExtResource("5_bdy0d")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx6cx"]
atlas = ExtResource("5_bdy0d")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_br1o7"]
atlas = ExtResource("5_bdy0d")
region = Rect2(768, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8m54"]
atlas = ExtResource("5_bdy0d")
region = Rect2(816, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvk3l"]
atlas = ExtResource("5_bdy0d")
region = Rect2(864, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1ugj"]
atlas = ExtResource("5_bdy0d")
region = Rect2(912, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvdf6"]
atlas = ExtResource("5_bdy0d")
region = Rect2(960, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv58d"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1008, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k03k"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1056, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ly7o"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1104, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxq7t"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1152, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qokae"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1200, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w042e"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1248, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_au5v5"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1296, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rnow"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1344, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_47jmo"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1392, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_skyy8"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1440, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8h1s"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1488, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dd7s"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1536, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3buj3"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1584, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7hwl"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1632, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxy54"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1680, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2shdj"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1728, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5xcd"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1776, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_multu"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1824, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym82k"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1872, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4vjo"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1920, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6gt6"]
atlas = ExtResource("5_bdy0d")
region = Rect2(1968, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ineu5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_et4k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odhgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmxhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ijoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4330o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr7an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jd1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn5lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm1f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k8j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku1fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf8hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ct8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us6rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx6cx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br1o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8m54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvk3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1ugj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvdf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv58d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k03k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ly7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxq7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qokae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w042e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au5v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rnow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47jmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skyy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8h1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dd7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3buj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7hwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxy54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2shdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5xcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_multu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym82k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4vjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6gt6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f33j1"]
size = Vector2(12.2516, 17.7778)

[sub_resource type="Animation" id="Animation_g3rl5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character_animator:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_av0wi"]
resource_name = "eng_hit"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.6), Vector2(1, 1), Vector2(1, 0.6), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character_animator:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.607843, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ev0j6"]
resource_name = "hit"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character_animator:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(3, 3, 3, 1), Color(1, 1, 1, 1), Color(3, 3, 3, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character_animator:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.0, 0.523599, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j4d3b"]
_data = {
"RESET": SubResource("Animation_g3rl5"),
"eng_hit": SubResource("Animation_av0wi"),
"hit": SubResource("Animation_ev0j6")
}

[sub_resource type="Resource" id="Resource_sa3bs"]
resource_local_to_scene = true
script = ExtResource("8_vgosh")
name = "Baller "
Friend_or_Foe = 1
MAX_HP = 18
MAX_ENG = 18
HP = 18
ENG = 18
Soul_Type = 0
Attack_Type = 1
Defense = 2
Magic_Defense = 0
MAX_EMP = 4
EMP = 0
Base_Phisical_Attack = 2
Base_Magical_Attack = 0
Speed = 1
range_in_cm = 12

[sub_resource type="Gradient" id="Gradient_klmtg"]
colors = PackedColorArray(0.0509804, 0.0509804, 0.0509804, 1, 0.0509804, 0.0509804, 0.0509804, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m5uam"]
gradient = SubResource("Gradient_klmtg")

[sub_resource type="Gradient" id="Gradient_wbj3g"]
colors = PackedColorArray(0.04, 0.04, 0.04, 0.588235, 0.06, 0.06, 0.06, 0.588235)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d0qvl"]
gradient = SubResource("Gradient_wbj3g")
fill_from = Vector2(0.543011, 0.543011)
fill_to = Vector2(0.537634, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gmgev"]
resource_local_to_scene = true
shader = ExtResource("5_grx1e")
shader_parameter/stepify = true
shader_parameter/value = 1.0
shader_parameter/count = 1
shader_parameter/margin = null
shader_parameter/shear_angle = 0.0
shader_parameter/use_value_gradient = false
shader_parameter/invert = false
shader_parameter/gradient_x = SubResource("GradientTexture2D_m5uam")
shader_parameter/gradient_y = SubResource("GradientTexture2D_d0qvl")

[sub_resource type="Gradient" id="Gradient_voo0t"]
colors = PackedColorArray(0.890196, 0.235294, 0.160784, 1, 0.890196, 0.235294, 0.160784, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kjh8r"]
gradient = SubResource("Gradient_voo0t")

[sub_resource type="Gradient" id="Gradient_plcdc"]
colors = PackedColorArray(0.7, 0.1204, 0.056, 0.784314, 0.91, 0.35308, 0.2912, 0.588235)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xn2i6"]
gradient = SubResource("Gradient_plcdc")
fill_from = Vector2(0.505376, 0.672043)
fill_to = Vector2(0.526882, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e7ddh"]
resource_local_to_scene = true
shader = ExtResource("6_fua16")
shader_parameter/stepify = true
shader_parameter/value = 1.0
shader_parameter/count = 20
shader_parameter/margin = Vector2(0.28, 0)
shader_parameter/shear_angle = 0.0
shader_parameter/use_value_gradient = false
shader_parameter/invert = false
shader_parameter/gradient_x = SubResource("GradientTexture2D_kjh8r")
shader_parameter/gradient_y = SubResource("GradientTexture2D_xn2i6")

[sub_resource type="Gradient" id="Gradient_cjxav"]
colors = PackedColorArray(0.207843, 0.890196, 0.160784, 1, 0.207843, 0.890196, 0.160784, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lgqhl"]
gradient = SubResource("Gradient_cjxav")

[sub_resource type="Gradient" id="Gradient_iavw6"]
colors = PackedColorArray(0.0989333, 0.7, 0.056, 0.784314, 0.332453, 0.91, 0.2912, 0.588235)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i1bxa"]
gradient = SubResource("Gradient_iavw6")
fill_from = Vector2(0.494624, 0.66129)
fill_to = Vector2(0.483871, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hkofe"]
resource_local_to_scene = true
shader = ExtResource("7_1uto1")
shader_parameter/stepify = true
shader_parameter/value = 1.0
shader_parameter/count = 30
shader_parameter/margin = Vector2(0.4, 0)
shader_parameter/shear_angle = 0.0
shader_parameter/use_value_gradient = false
shader_parameter/invert = false
shader_parameter/gradient_x = SubResource("GradientTexture2D_lgqhl")
shader_parameter/gradient_y = SubResource("GradientTexture2D_i1bxa")

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("Bar")]
script = ExtResource("1_pbqx5")
Turn_portriat = ExtResource("2_gg1ba")
Initiative = ExtResource("3_gt5bv")
Fight_stats = ExtResource("4_ndcdo")
Bar = NodePath("Bar_system")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, 7)
scale = Vector2(1, 0.51)
shape = SubResource("CircleShape2D_qs5gw")

[node name="character_animator" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 19)
sprite_frames = SubResource("SpriteFrames_ineu5")
animation = &"idle"
speed_scale = 4.0
offset = Vector2(0, -27.315)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-3.02646, -11)
scale = Vector2(1.8, 1.8)
shape = SubResource("RectangleShape2D_f33j1")

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j4d3b")
}

[node name="Indicator" type="Sprite2D" parent="."]
visible = false
position = Vector2(-3, -76)
scale = Vector2(3, 3)
texture = ExtResource("2_htaiq")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="Bar_system" parent="." instance=ExtResource("4_700jv")]
offset_left = -114.0
offset_top = -66.0
offset_right = -114.0
offset_bottom = -66.0
scale = Vector2(1.74, 1.74)
assined_characters = SubResource("Resource_sa3bs")

[node name="Name_tab" parent="Bar_system" index="0"]
visible = false

[node name="Health" parent="Bar_system" index="1"]
visible = false

[node name="Energy" parent="Bar_system" index="2"]
visible = false

[node name="NULL" parent="Bar_system" index="3"]
material = SubResource("ShaderMaterial_gmgev")
offset_left = 0.0
offset_top = 0.0
offset_right = 132.0
offset_bottom = 13.0

[node name="HP_Segmented_Bar" parent="Bar_system" index="4"]
material = SubResource("ShaderMaterial_e7ddh")
offset_right = 119.0
offset_bottom = 13.0

[node name="ENG_Segmented_Bar" parent="Bar_system" index="5"]
material = SubResource("ShaderMaterial_hkofe")
offset_top = 4.0
offset_right = 119.0
offset_bottom = 12.0

[node name="Bar_Border" parent="Bar_system" index="6"]
offset_right = 122.0
offset_bottom = 14.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2(-3.02646, -11)
scale = Vector2(1.8, 1.8)
shape = SubResource("RectangleShape2D_f33j1")

[node name="PCamTarget" type="Node2D" parent="."]
script = ExtResource("12_wuf5g")
radius = 300.0
enabled = false

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]

[editable path="Bar_system"]
